--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl      = "localhost"
 title        = "My Blog"
 languageCode = "en-us"
-theme        = "hello-friend-ng"
+theme        = "hugo-theme-hello-friend-ng"
 paginate     = 10
 
 [params]
